<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#ffa82f"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context=".MainActivity">



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_voo_origem"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:paddingRight="15px"
                />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/Origem"
                android:id="@+id/dropdown_origens"
                android:paddingBottom="8dp"
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_voo_destino"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:paddingRight="15px"
                />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/Destino"
                android:id="@+id/dropdown_destinos"
                android:paddingBottom="8dp"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:gravity="center"
            android:weightSum="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceButton"
                android:text="@string/botao_consultar"
                android:onClick="ConsultarVoosSimples"
                android:id="@+id/botao_consultar"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceButton"
                android:text="@string/botao_consultar2"
                android:onClick="ConsultarVoosCompleto"
                android:id="@+id/botao_conultar2"/>

        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:gravity="center">>
            <ProgressBar
                android:id="@+id/carregando"
                style="@android:style/Widget.ProgressBar.Large.Inverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>